[tool.poetry]
name = "binance_testnet_tool"
version = "0.1.0"
description = ""
authors = ["Mikko Ohtamaa <mikko@capitalgram.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
python-binance = "^0.7.11"
coloredlogs = "^15.0"
tabulate = "^0.8.9"
Pygments = "^2.8.1"
pycoingecko = "^1.4.1"
ipython = "^7.22.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
binance-testnet-tool = "binance_testnet_tool.maim:main"